--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 # Created by https://www.gitignore.io/api/node,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=node,visualstudiocode
 
+# Secrets
+.env
+
+# Files folder
+files/*
+
 ### Node ###
 # Logs
 logs
